# quake-log-parser

./: README.md  pyproject.toml  tox.ini
.github/workflows/: dev.yml
quake_log_parser/: __init__.py  __main__.py  parser.py
tests/: test_parser.py
