[tool.poetry]
name = "quake-log-parser"
version = "0.1.0"
description = "Parser for Quake 3 Arena log files."
authors = ["William Fernandes Dias <william.winchester1967@gmail.com>"]
readme = "README.md"
packages = [{ include = "quake_log_parser" }]

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.7"
pyyaml = "^6.0.1"
types-pyyaml = { version = "^6.0.12.20240311", optional = true }
pytest = { version = "^8.2.0", optional = true }
mypy = { version = "^1.10.0", optional = true }
tox = { version = "^4.15.0", optional = true }
tox-gh-actions = { version = "^3.2.0", optional = true }

[tool.poetry.scripts]
quake = "quake_log_parser:parse_quake_log"

[tool.poetry.extras]
dev = ["pytest", "mypy", "types-pyyaml", "tox", "types-pyyaml"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py"]
python_functions = ["test_*", "it_*", "its_*"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
